# MEDS_EIC_AR

./: .pre-commit-config.yaml  CITATION.cff  README.md  conftest.py  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: python-build.yaml  tests.yaml
scripts/: dgx_spark_sglang_smoke.py
src/MEDS_EIC_AR/: __main__.py  utils.py
src/MEDS_EIC_AR/configs/: README.md  _data.yaml  _demo_generate_trajectories.yaml  _demo_pretrain.yaml  _generate_trajectories.yaml  _predict_from_trajectories.yaml  _pretrain.yaml  _process_data.yaml  _train.yaml
src/MEDS_EIC_AR/configs/backend/: hf.yaml  sglang.yaml  sglang_demo.yaml
src/MEDS_EIC_AR/configs/datamodule/: default.yaml  generate_trajectories.yaml  pretrain.yaml
src/MEDS_EIC_AR/configs/dataset/: default.yaml  train.yaml
src/MEDS_EIC_AR/configs/inference/: default.yaml
src/MEDS_EIC_AR/configs/lightning_module/: default.yaml  demo.yaml  large.yaml  medium.yaml  micro.yaml  pretrain.yaml  small.yaml
src/MEDS_EIC_AR/configs/lightning_module/metrics/: default.yaml
src/MEDS_EIC_AR/configs/lightning_module/model/: default.yaml  demo.yaml  small.yaml
src/MEDS_EIC_AR/configs/trainer/: default.yaml  demo.yaml  demo_generate.yaml  generate.yaml  generation.yaml
src/MEDS_EIC_AR/configs/trainer/callbacks/: default.yaml  generation.yaml  generation_speed_logger.yaml  model_checkpoint.yaml
src/MEDS_EIC_AR/configs/trainer/logger/: csv.yaml  wandb.yaml
src/MEDS_EIC_AR/generation/: __init__.py  finalize.py  format_trajectories.py  repeated_dataset.py  runner.py  utils.py
src/MEDS_EIC_AR/lightning/: README.md  datamodule.py  metrics.py  module.py
src/MEDS_EIC_AR/model/: README.md  model.py
src/MEDS_EIC_AR/model/backends/: __init__.py  base.py  build.py  export.py  hf.py  sglang.py
src/MEDS_EIC_AR/models/: README.md  model.py
src/MEDS_EIC_AR/preprocessing/: README.md  __main__.py  add_time_interval_tokens.py  quantile_binning.py
src/MEDS_EIC_AR/preprocessing/configs/: _data.yaml  _data_custom_bins.yaml  _data_no_numeric.yaml  _reshard_custom_bins.yaml  _reshard_data.yaml  _reshard_no_numeric.yaml
src/MEDS_EIC_AR/stages/: add_time_interval_tokens.py  quantile_binning.py
src/MEDS_EIC_AR/training/: README.md  __init__.py  callbacks.py  files.py  logarithmic_checkpoint.py  metrics.py  module.py
tests/: _grammar_meds.py  test_environment_snapshot.py  test_generate_trajectories.py  test_generation_backend.py  test_logger_helpers.py  test_logger_helpers_integration.py  test_pattern_generation.py  test_pattern_generation_cli.py  test_pretrain.py  test_process_data.py  test_rolling_generate.py  test_runner_finalize.py  test_sglang_backend.py  test_sglang_export.py  test_toy_data.py
tests/grammar/: _grammar.py  _meds.py  conftest.py  test_cli.py  test_cli_sglang.py  test_in_process.py
